# agent-overlay

./: README.md  agent-overlay  pm_document.md  pyproject.toml
src/overlay_manager/: cli.py  core.py
tests/: test_core.py
