[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-overlay"
version = "0.1.0"
description = "A Copy-on-Write FUSE overlay manager for concurrent AI agents."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
agent-overlay = "overlay_manager.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
